0.04
 - Add SEE ALSO section to Unicode::Block doc.
 - Add SEE ALSO section to Unicode::Block::Item doc.
 - Fix test 09-width.t for C locale.
 - Rewrite unassigned unicode character to '' (blank space).
 - Update Module::Install to 1.18 version.
 - Update copyright years.

0.03 2014-08-26T03:04:50+02:00
 - Add minimal version of Perl.
 - Add tests.

0.02 2014-08-20T09:05:16+02:00
 - Fix dependency to Class::Utils 0.06 version.

0.01 2014-08-20T07:36:40+02:00
 - First version.