@@ -257,7 +257,7 @@ L<https://github.com/tupinek/Unicode-Block>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
