@@ -82,7 +82,7 @@ REPOSITORY
     <https://github.com/tupinek/Unicode-Block>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
